cmake_minimum_required(VERSION 3.20)
project(color_converter VERSION 0.1.0)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 20)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/binary/Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
file(GLOB_RECURSE HEADER_FILE ${SOURCE_DIR}/*.h ${SOURCE_DIR}/*.hpp)
file(GLOB_RECURSE SOURCE_FILE ${SOURCE_DIR}/*.c ${SOURCE_DIR}/*.cpp)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${HEADER_FILE} ${SOURCE_FILE})

include_directories(
    ${SOURCE_DIR}
)

add_library(${PROJECT_NAME} SHARED ${HEADER_FILE} ${SOURCE_FILE})

set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} /O2 /Ob2")
if(MSVC)
    set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/EHsc")
endif()
